# study-hub

./: README.md  requirements.txt  vercel_bot.md
api/: index.py
api/features/: __init__.py  commands.py
transformer/: .gitignore  CMakeLists.txt  README.md  debug-ietcf-nan.md  placeholder.md  project.md  run.txt
transformer/.github/workflows/: ci.yml
transformer/configs/: default.json
transformer/docs/: implementation-plan.md  phase-0-implementation-plan.md  phase-1-implementation-plan.md  phase-2-implementation-plan.md  phase-3-implementation-plan.md  phase-4-implementation-plan.md  phase-5-implementation-plan.md  production-level-roadmap.md  productionization-plan.md  release-checklist.md  release-validation-checklist.md
transformer/include/aurelis/: autodiff.hpp  config.hpp  errors.hpp  linalg.h  logging.hpp  matmul.h  orthogonal.h  profiler.hpp  recurrence.h  scan.h  spectral.hpp  state_partition.hpp  tensor.hpp
transformer/include/aurelis/arc/: ale.hpp  ask_r.hpp  ccrc.hpp  config.hpp  mc_fws.hpp  rcvg.hpp  roi.hpp  rse.hpp
transformer/include/aurelis/aureum/: ccc.hpp  config.hpp  cq.hpp  dtc.hpp  ese.hpp  kmg.hpp  pii.hpp
transformer/include/aurelis/c/: quant_int4_int8.h  tensor_ring.h  trainer.h
transformer/include/aurelis/convergence/: agi_bus.hpp  common.hpp  efe.hpp
transformer/include/aurelis/lens/: activations.hpp  bpe.hpp  config.hpp  csc.hpp  fwse.hpp  ietcf.hpp  lens_layer.hpp  lens_model.hpp  linear.hpp  loss.hpp  mgp.hpp  mssp.hpp  osh.hpp  ptk.hpp  spi.hpp
transformer/include/aurelis/nlohmann/: json.hpp
transformer/include/aurelis/tesserae/: cvk.hpp  eds.hpp  efd.hpp  epqe.hpp  inws.hpp  p4il.hpp  trfc.hpp
transformer/python/aurelis/: _core.cpp  trainer.py
transformer/python/aurelis/examples/: train_dailydialog.py  train_demo.py
transformer/python/examples/: basic.py
transformer/scripts/: preprocess_dailydialog.py  verify_release.ps1
transformer/src/arc/: ale.cpp  ask_r.cpp  ccrc.cpp  mc_fws.cpp  rcvg.cpp  roi.cpp  rse.cpp
transformer/src/aureum/: ccc.cpp  cq.cpp  dtc.cpp  ese.cpp  kmg.cpp  pii.cpp
transformer/src/c/: linalg_small.c  matmul_blas.c  orthogonal.c  quant_int4_int8.c  recurrence_diag.c  scan_blelloch.c  tensor_ring.c  trainer_abi.cpp
transformer/src/convergence/: agi_bus.cpp  efe.cpp
transformer/src/core/: autodiff.cpp  logging.cpp  profiler.cpp  spectral.cpp  state_partition.cpp  tensor.cpp
transformer/src/lens/: activations.cpp  bpe.cpp  csc.cpp  fwse.cpp  ietcf.cpp  lens_layer.cpp  lens_model.cpp  linear.cpp  loss.cpp  mgp.cpp  mssp.cpp  osh.cpp  spi.cpp
transformer/src/tesserae/: cvk.cpp  eds.cpp  efd.cpp  epqe.cpp  inws.cpp  p4il.cpp  trfc.cpp
transformer/src/train/: train_lens.cpp
transformer/tests/c/: test_scan.c
transformer/tests/cpp/: debug_ietcf.cpp  test_arc.cpp  test_aureum.cpp  test_convergence.cpp  test_fwse_spectral.cpp  test_ietcf_only.cpp  test_lens_forward.cpp  test_mgp.cpp  test_nan_debug.cpp  test_phase0.cpp  test_production_hardening.cpp  test_production_suite.cpp  test_tensor.cpp
transformer/tools/: benchmark_release.ps1  validate_release.ps1
